update gulp tasks

--- a/dev/scss/sassquatch/tests/index.html
+++ b/dev/scss/sassquatch/tests/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link href="tests.css" rel="stylesheet">
+    <link href='tests.css' rel='stylesheet'>
 </head>
 <body>
-    <div class="tests-wrapper">
-        <section class="transforms mixin-set">
+    <div class='tests-wrapper'>
+        <section class='transforms mixin-set'>
             <h1>
                 2D Transforms
             </h1>
-            <section class="untouched">
+            <section class='untouched'>
                 <header>
                     <h3>
                         No Transforms Applied
@@ -18,16 +18,16 @@
                         Shows boxes before mixins
                     </aside>
                 </header>
-                <div class="object">
-                    <div class="vanilla">
+                <div class='object'>
+                    <div class='vanilla'>
 
                     </div>
-                    <div class="applied-test">
+                    <div class='applied-test'>
 
                     </div>
                 </div>
             </section>
-            <section class="rotate">
+            <section class='rotate'>
                 <header>
                     <h3>
                         @include transform-rotate(30)
@@ -36,16 +36,16 @@
                         Rotates an element using a 2D transform
                     </aside>
                 </header>
-                <div class="object">
-                    <div class="vanilla">
+                <div class='object'>
+                    <div class='vanilla'>
 
                     </div>
-                    <div class="applied-test">
+                    <div class='applied-test'>
 
                     </div>
                 </div>
             </section>
-            <section class="scale">
+            <section class='scale'>
                 <header>
                     <h3>
                         @include transform-scale(2,1.5)
@@ -54,16 +54,16 @@
                         Enlarges/Reduces size of an element using a 2D transform
                     </aside>
                 </header>
-                <div class="object">
-                    <div class="vanilla">
+                <div class='object'>
+                    <div class='vanilla'>
 
                     </div>
-                    <div class="applied-test">
+                    <div class='applied-test'>
 
                     </div>
                 </div>
             </section>
-            <section class="skew">
+            <section class='skew'>
                 <header>
                     <h3>
                         @include transform-skew(10,20)
@@ -72,16 +72,16 @@
                         Skews an element using a 2D transform
                     </aside>
                 </header>
-                <div class="object">
-                    <div class="vanilla">
+                <div class='object'>
+                    <div class='vanilla'>
 
                     </div>
-                    <div class="applied-test">
+                    <div class='applied-test'>
 
                     </div>
                 </div>
             </section>
-            <section class="translate">
+            <section class='translate'>
                 <header>
                     <h3>
                         @include transform-translate(10px,1em)
@@ -90,21 +90,21 @@
                         Relocates an element using a 2D transform
                     </aside>
                 </header>
-                <div class="object">
-                    <div class="vanilla">
+                <div class='object'>
+                    <div class='vanilla'>
 
                     </div>
-                    <div class="applied-test">
+                    <div class='applied-test'>
 
                     </div>
                 </div>
             </section>
         </section>
-        <section class="animations mixin-set">
+        <section class='animations mixin-set'>
             <h1>
                 Animations
             </h1>
-            <section class="untouched">
+            <section class='untouched'>
                 <header>
                     <h3>
                         No Animations Applied
@@ -113,16 +113,16 @@
                         Shows boxes before mixins
                     </aside>
                 </header>
-                <div class="object">
-                    <div class="vanilla">
+                <div class='object'>
+                    <div class='vanilla'>
 
                     </div>
-                    <div class="applied-test">
+                    <div class='applied-test'>
 
                     </div>
                 </div>
             </section>
-            <section class="transition">
+            <section class='transition'>
                 <header>
                     <h3>
                         @include transition(width .3s ease);
@@ -131,16 +131,16 @@
                         Animates an object's width
                     </aside>
                 </header>
-                <div class="object">
-                    <div class="vanilla">
+                <div class='object'>
+                    <div class='vanilla'>
 
                     </div>
-                    <div class="applied-test">
+                    <div class='applied-test'>
 
                     </div>
                 </div>
             </section>
-            <section class="multi-transition">
+            <section class='multi-transition'>
                 <header>
                     <h3>
                         @include multi-transition('background-color .3s ease',<br />
@@ -151,16 +151,16 @@
                         Animates an object's width and height
                     </aside>
                 </header>
-                <div class="object">
-                    <div class="vanilla">
+                <div class='object'>
+                    <div class='vanilla'>
 
                     </div>
-                    <div class="applied-test">
+                    <div class='applied-test'>
 
                     </div>
                 </div>
             </section>
-            <section class="animation">
+            <section class='animation'>
                 <header>
                     <h3>
                         @include animation(box-rotate 5s);<br />
@@ -173,21 +173,21 @@
                         Rotate an object via keyframe animation
                     </aside>
                 </header>
-                <div class="object">
-                    <div class="vanilla">
+                <div class='object'>
+                    <div class='vanilla'>
 
                     </div>
-                    <div class="applied-test">
+                    <div class='applied-test'>
 
                     </div>
                 </div>
             </section>
         </section>
-        <section class="filters mixin-set">
+        <section class='filters mixin-set'>
             <h1>
                 Filters
             </h1>
-            <section class="untouched">
+            <section class='untouched'>
                 <header>
                     <h3>
                         No Filters Applied
@@ -196,12 +196,12 @@
                         Shows boxes before mixins
                     </aside>
                 </header>
-                <div class="object">
-                    <img src="img/3themeslogo_large.png" class="vanilla-img" />
-                    <img src="img/3themeslogo_large.png" class="vanilla-img" />
+                <div class='object'>
+                    <img src='img/3themeslogo_large.png' class='vanilla-img' />
+                    <img src='img/3themeslogo_large.png' class='vanilla-img' />
                 </div>
             </section>
-            <section class="blur">
+            <section class='blur'>
                 <header>
                     <h3>
                         @include filter-blur(10px);
@@ -210,12 +210,12 @@
                         Gaussian blur with 10px radius
                     </aside>
                 </header>
-                <div class="object">
-                    <img src="img/3themeslogo_large.png" class="vanilla-img" />
-                    <img src="img/3themeslogo_large.png" class="applied-test-img" />
+                <div class='object'>
+                    <img src='img/3themeslogo_large.png' class='vanilla-img' />
+                    <img src='img/3themeslogo_large.png' class='applied-test-img' />
                 </div>
             </section>
-            <section class="brightness">
+            <section class='brightness'>
                 <header>
                     <h3>
                         @include filter-brightness(115%);
@@ -224,12 +224,12 @@
                         15% increase in the element's brightness
                     </aside>
                 </header>
-                <div class="object">
-                    <img src="img/3themeslogo_large.png" class="vanilla-img" />
-                    <img src="img/3themeslogo_large.png" class="applied-test-img" />
+                <div class='object'>
+                    <img src='img/3themeslogo_large.png' class='vanilla-img' />
+                    <img src='img/3themeslogo_large.png' class='applied-test-img' />
                 </div>
             </section>
-            <section class="contrast">
+            <section class='contrast'>
                 <header>
                     <h3>
                         @include filter-contrast(125%);
@@ -238,12 +238,12 @@
                         25% increase in the element's contrast
                     </aside>
                 </header>
-                <div class="object">
-                    <img src="img/3themeslogo_large.png" class="vanilla-img" />
-                    <img src="img/3themeslogo_large.png" class="applied-test-img" />
+                <div class='object'>
+                    <img src='img/3themeslogo_large.png' class='vanilla-img' />
+                    <img src='img/3themeslogo_large.png' class='applied-test-img' />
                 </div>
             </section>
-            <section class="grayscale">
+            <section class='grayscale'>
                 <header>
                     <h3>
                         @include filter-grayscale(100%);
@@ -252,12 +252,12 @@
                         100% removal of color
                     </aside>
                 </header>
-                <div class="object">
-                    <img src="img/3themeslogo_large.png" class="vanilla-img" />
-                    <img src="img/3themeslogo_large.png" class="applied-test-img" />
+                <div class='object'>
+                    <img src='img/3themeslogo_large.png' class='vanilla-img' />
+                    <img src='img/3themeslogo_large.png' class='applied-test-img' />
                 </div>
             </section>
-            <section class="hue-rotate">
+            <section class='hue-rotate'>
                 <header>
                     <h3>
                         @include filter-hue-rotate(150);
@@ -266,12 +266,12 @@
                         Change the color of an element by rotating it's hue.
                     </aside>
                 </header>
-                <div class="object">
-                    <img src="img/3themeslogo_large.png" class="vanilla-img" />
-                    <img src="img/3themeslogo_large.png" class="applied-test-img" />
+                <div class='object'>
+                    <img src='img/3themeslogo_large.png' class='vanilla-img' />
+                    <img src='img/3themeslogo_large.png' class='applied-test-img' />
                 </div>
             </section>
-            <section class="invert">
+            <section class='invert'>
                 <header>
                     <h3>
                         @include filter-invert(100%);
@@ -280,12 +280,12 @@
                         Invert an element's colors
                     </aside>
                 </header>
-                <div class="object">
-                    <img src="img/3themeslogo_large.png" class="vanilla-img" />
-                    <img src="img/3themeslogo_large.png" class="applied-test-img" />
+                <div class='object'>
+                    <img src='img/3themeslogo_large.png' class='vanilla-img' />
+                    <img src='img/3themeslogo_large.png' class='applied-test-img' />
                 </div>
             </section>
-            <section class="saturate">
+            <section class='saturate'>
                 <header>
                     <h3>
                         @include filter-saturate(300%);
@@ -294,12 +294,12 @@
                         Saturate an element's colors
                     </aside>
                 </header>
-                <div class="object">
-                    <img src="img/3themeslogo_large.png" class="vanilla-img" />
-                    <img src="img/3themeslogo_large.png" class="applied-test-img" />
+                <div class='object'>
+                    <img src='img/3themeslogo_large.png' class='vanilla-img' />
+                    <img src='img/3themeslogo_large.png' class='applied-test-img' />
                 </div>
             </section>
-            <section class="sepia">
+            <section class='sepia'>
                 <header>
                     <h3>
                         @include filter-sepia(100%);
@@ -308,17 +308,17 @@
                         Apply a sepia tone to an element.
                     </aside>
                 </header>
-                <div class="object">
-                    <img src="img/3themeslogo_large.png" class="vanilla-img" />
-                    <img src="img/3themeslogo_large.png" class="applied-test-img" />
+                <div class='object'>
+                    <img src='img/3themeslogo_large.png' class='vanilla-img' />
+                    <img src='img/3themeslogo_large.png' class='applied-test-img' />
                 </div>
             </section>
         </section>
-        <section class="backgrounds mixin-set">
+        <section class='backgrounds mixin-set'>
             <h1>
                 Backgrounds
             </h1>
-            <section class="untouched">
+            <section class='untouched'>
                 <header>
                     <h3>
                         No Backgrounds Applied
@@ -327,16 +327,16 @@
                         Shows boxes before mixins
                     </aside>
                 </header>
-                <div class="object">
-                    <div class="vanilla">
+                <div class='object'>
+                    <div class='vanilla'>
 
                     </div>
-                    <div class="applied-test">
+                    <div class='applied-test'>
 
                     </div>
                 </div>
             </section>
-            <section class="horizontal">
+            <section class='horizontal'>
                 <header>
                     <h3>
                         @include horizontal(#bada55, #ffffff);
@@ -345,16 +345,16 @@
                         Horizontal gradient background from #bada55 to #ffffff
                     </aside>
                 </header>
-                <div class="object">
-                    <div class="vanilla">
+                <div class='object'>
+                    <div class='vanilla'>
 
                     </div>
-                    <div class="applied-test">
+                    <div class='applied-test'>
 
                     </div>
                 </div>
             </section>
-            <section class="vertical">
+            <section class='vertical'>
                 <header>
                     <h3>
                         @include vertical(#bada55, #ffffff);
@@ -363,16 +363,16 @@
                         Vertical gradient background from #bada55 to #ffffff
                     </aside>
                 </header>
-                <div class="object">
-                    <div class="vanilla">
+                <div class='object'>
+                    <div class='vanilla'>
 
                     </div>
-                    <div class="applied-test">
+                    <div class='applied-test'>
 
                     </div>
                 </div>
             </section>
-            <section class="directional">
+            <section class='directional'>
                 <header>
                     <h3>
                         @include directional(#bada55, #ffffff, 45deg);
@@ -381,16 +381,16 @@
                         Directional gradient background from #bada55 to #ffffff at 45 degrees
                     </aside>
                 </header>
-                <div class="object">
-                    <div class="vanilla">
+                <div class='object'>
+                    <div class='vanilla'>
 
                     </div>
-                    <div class="applied-test">
+                    <div class='applied-test'>
 
                     </div>
                 </div>
             </section>
-            <section class="background-2x">
+            <section class='background-2x'>
                 <header>
                     <h3>
                         @include background-2x();
@@ -399,11 +399,11 @@
                         Still needs a test error from $bgimg
                     </aside>
                 </header>
-                <div class="object">
-                    
+                <div class='object'>
+
                 </div>
             </section>
-            <section class="background-3x">
+            <section class='background-3x'>
                 <header>
                     <h3>
                         @include background-3x();
@@ -412,8 +412,8 @@
                         Still needs a test error from $bgimg
                     </aside>
                 </header>
-                <div class="object">
-                    
+                <div class='object'>
+
                 </div>
             </section>
         </section>
