pass all linting

--- a/dev/index.html
+++ b/dev/index.html
@@ -88,7 +88,7 @@
         </section>
         <aside class="sources share-active" id="sources">
             <nav class="sources--nav">
-                <a id="shareToggle">Share</a><a id="sourcesToggle">Sources</a>
+                <a id="shareToggle" class="share-toggle">Share</a><a id="sourcesToggle" class="sources-toggle">Sources</a>
             </nav>
             <ol class="sources--list">
                 <li>
